
public class BillAnalysis {
    private String analysisId;
    private String billId;
    private String details;
    private float comparisonWithAvg;

    public void generateReport() {
        // Simulate generating a report
        System.out.println("Analysis ID: " + analysisId);
        System.out.println("Bill ID: " + billId);
        System.out.println("Details: " + details);
        System.out.println("Comparison with Average: " + comparisonWithAvg);
    }
}